fix width on mobile

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,16 +1,13 @@
-html {
-	scroll-behavior: smooth;
-}
-
 html, body {
 	width: auto!important; 
 	overflow-x: hidden!important;
 	height: 100%;
+	scroll-behavior: smooth;
 } 
 
 body {
     margin: 0;
-    padding: 0 !important;
+    padding: 0;
     background-image: url("/imgs/ado.jpg");
     background-repeat: no-repeat;
     background-position: center center;
